--- a/styles/architec.css
+++ b/styles/architec.css
@@ -48,3 +48,39 @@ nav li{
 .banner-description{
   color: #727272;
 }
+.btn-primary{
+  margin-top: 32px;
+  margin-bottom: 32px;
+  color: #FFF;
+  padding: 20px 25px;
+  border-radius: 8px;
+  background: #FF900E;
+  font-size: 1.5rem;
+  font-weight: 500;
+  border: 0;
+}
+.banner img{
+  width: 100%;
+}
+
+/* Mobile devise  Responsive media query */
+@media screen and (max-width:576px) {
+      header{
+        padding: 20px;
+      }
+      nav{
+        flex-direction: column;
+      }
+  
+}
+
+/* Tablet Medium Devise */
+@media screen and (min-width:576px) and (max-width:992px) {
+    header{
+      padding: 50px;
+    }
+    nav{
+      flex-direction: column;
+    }
+  
+}
